# pintheon_contracts

./: .gitignore  HVYM_CERT_REGISTRY.md  HVYM_PIN_SERVICE.md  IMPORT_NAMING_GUIDE.md  LOCAL_STELLAR_NODE.md  OPUS_TOKEN_ICON.md  README.md  REGISTRY_VERIFICATION.md  RELEASE_NOTES.md  TOKEN_TOML.md  bindings_deployments.json  build_contracts.py  check_rpc.py  cloud_build.py  deploy_collective_dependency_contracts.py  deploy_contracts.py  deploy_node_and_ipfs.py  deploy_released_contracts.py  deploy_robust.py  deploy_with_js.js  deploy_with_xdr_workaround.py  deployments.json  deployments.md  deployments.public.json  deployments.public.md  deployments.testnet.json  deployments.testnet.md  download_wasm_releases.py  extract_contract_address.py  generate_bindings.py  get_contract_address.py  hvym-collective_args.json  hvym-collective_post_deploy_args.json  hvym_collective_args.json  hvym_collective_post_deploy_args.json  hvym_pin_service_args.json  hvym_pin_service_factory_args.json  hvym_post_deploy.py  hvym_roster_args.json  opus-token_args.json  (+17 more)
.github/workflows/: README.md  custom-deploy.yml  custom-release.yml  mainnet-release.yml
.stellar/network/: ankr-soroban.toml
bindings/examples/: 01_basic_queries.py  02_join_collective.py  03_async_example.py  04_publish_file.py  05_roster_example.py  06_pin_service_queries.py  07_pin_service_pinner.py  08_pin_service_publisher.py  09_pin_service_admin.py  10_pin_service_factory_queries.py  11_pin_service_factory_deploy.py  README.md  __init__.py  config.py  test_roster_bindings.py
bindings/hvym_cert_registry/: bindings.py
bindings/hvym_collective/: bindings.py
bindings/hvym_pin_service/: bindings.py
bindings/hvym_pin_service_factory/: bindings.py
bindings/hvym_registry/: bindings.py
bindings/hvym_roster/: bindings.py
bindings/opus_token/: bindings.py
bindings/pintheon_ipfs_token/: bindings.py
bindings/pintheon_node_token/: bindings.py
custom_crates/hvym-file-token/: Cargo.toml  README.md
custom_crates/hvym-file-token/src/: filemetadata.rs  lib.rs
custom_crates/hvym-node-token/: Cargo.toml  README.md
custom_crates/hvym-node-token/src/: lib.rs  nodemetadata.rs
custom_crates/philos-ipfs-token/: Cargo.toml
custom_crates/philos-ipfs-token/src/: contract.rs  metadata.rs  test.rs
hvym-cert-registry/: Cargo.toml
hvym-cert-registry/src/: lib.rs  test.rs
hvym-collective/: Cargo.toml  README.md
hvym-collective-factory/: Cargo.toml
hvym-collective-factory/src/: lib.rs  test.rs
hvym-collective/src/: lib.rs  rent_tests.rs  test.rs
hvym-pin-service/: Cargo.toml
hvym-pin-service-factory/: Cargo.toml  Makefile
hvym-pin-service-factory/src/: lib.rs  test.rs
hvym-pin-service-factory/test_snapshots/test/: test_admin_authorization.1.json  test_factory_initialization.1.json  test_get_instance_at_out_of_bounds.1.json  test_get_instances_list.1.json  test_multiple_deploys.1.json  test_route_to_available.1.json  test_single_deploy.1.json
hvym-pin-service/src/: admin.rs  lib.rs  pinner.rs  rent_tests.rs  slots.rs  storage.rs  test.rs  types.rs
hvym-registry/: Cargo.toml  USAGE.md
hvym-registry/src/: lib.rs  test.rs
hvym-roster/: Cargo.toml  tmpclaude-3956-cwd
hvym-roster/src/: lib.rs  rent_tests.rs  test.rs
hvym-roster/test_snapshots/test/: test_add_admin.1.json  test_add_admin_unauthorized.1.json  test_admin_authorization_in_existing_functions.1.json  test_admin_can_update_member_canon.1.json  test_admin_events.1.json  test_double_join_should_fail.1.json  test_emits_join_and_remove_events.1.json  test_fund_and_withdraw.1.json  test_join_and_remove.1.json  test_multi_admin_functionality.1.json  test_remove_admin.1.json  test_remove_nonexistent_admin.1.json  test_remove_unauthorized.1.json  test_symbol.1.json  test_update_canon.1.json  test_update_canon_too_long.1.json  test_update_canon_unauthorized.1.json  test_update_join_fee.1.json  test_zero_value_funding.1.json
mock_c2pa/: .gitignore  README.md  __init__.py  canonical.py  keystore.py  register.py  requirements.txt  run_mock_flow.py
mock_c2pa/andromica/: __init__.py  bundle.py  ca_generation.py
mock_c2pa/portal_mock/: __init__.py  mint_token.py
opus_token/: Cargo.toml
opus_token/src/: contract.rs  event.rs  lib.rs  metadata.rs  rent_tests.rs  test.rs
philos-ipfs-deployer/philos-ipfs-factory/: Cargo.toml
philos-ipfs-deployer/philos-ipfs-factory/src/: test.rs
philos-ipfs-deployer/philos-ipfs-token/: Cargo.toml
philos-ipfs-deployer/philos-ipfs-token/src/: contract.rs  metadata.rs  test.rs
philos-node-deployer/hvym-collective/: Cargo.toml
philos-node-deployer/hvym-collective/src/: lib.rs  test.rs
philos-node-deployer/philos-node-factory/: Cargo.toml
philos-node-deployer/philos-node-factory/src/: lib.rs  test.rs
philos-node-deployer/philos-node-token/: .gitignore  Cargo.toml
philos-node-deployer/philos-node-token/src/: contract.rs  metadata.rs  test.rs
pintheon-ipfs-deployer/pintheon-ipfs-factory/: Cargo.toml
pintheon-ipfs-deployer/pintheon-ipfs-factory/src/: test.rs
pintheon-ipfs-deployer/pintheon-ipfs-token/: Cargo.toml
pintheon-ipfs-deployer/pintheon-ipfs-token/src/: contract.rs  lib.rs  metadata.rs  rent_tests.rs  storage_types.rs  test.rs
pintheon-node-deployer/pintheon-node-factory/: Cargo.toml
pintheon-node-deployer/pintheon-node-factory/src/: lib.rs  test.rs
pintheon-node-deployer/pintheon-node-token/: Cargo.toml
pintheon-node-deployer/pintheon-node-token/src/: contract.rs  lib.rs  metadata.rs  rent_tests.rs  test.rs
scripts/: no_subscription_model.py  run_rent_tests.py
