[package]
name = "hvym-node-token"
description = "Custom ipfs node token for Heavymeta Network, code variant based on Soroban Token SDK."
version = "0.0.6"
homepage = "https://github.com/inviti8/philos_contracts/custom_crates/hvym-node-token"
repository = "https://github.com/inviti8/philos_contracts/custom_crates/hvym-node-token"
authors = ["Heavymeta <metavinci@heavymeta.art>"]
readme = "./README.md"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "23.0.1" }

[dev-dependencies]
soroban-sdk = { version = "23.0.1", features = ["testutils"] }
