[package]
name = "pintheon-ipfs-token"
description = "A standard Soroban token extended with IPFS metadata"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "23.0.1"
soroban-token-sdk = "23.0.1"
hvym-file-token = "0.0.7"

[dev-dependencies]
soroban-sdk = { version = "23.0.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false

[profile.release.build-override]
opt-level = 3

[profile.release.package."*"]
opt-level = 3

[profile.release.package.soroban-sdk]
opt-level = "z"
